@@ -349,8 +349,6 @@ static void enter_connect_mode(game_display& disp, const config& game_config, ga
 		if (res == mp::ui::PLAY) {
 			ui.start_game();
 			state = ui.get_state();
-			const config* const era_cfg = game_config.find_child("era","id",params.era);
-			game_events::add_events(era_cfg->get_children("event"),"all");
 		}
 	}
 
